Kubernetes up and running/service-queue.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue
  labels:
    app: work-queue
    component: queue
    chapter: jobs
spec:
  selector:
    app: work-queue
    component: queue
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
