Kubernetes up and running/simple-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-ingress
  labels:
    name: simple-ingress
spec:
  backend:
      serviceName: alpaca
      servicePort: 8080
